update dependencys and add fl responsive

--- a/packages/responsive/pubspec.yaml
+++ b/packages/responsive/pubspec.yaml
@@ -1,9 +1,7 @@
-name: responsive
+name: fl_responsive
 description: A new Flutter package project.
-version: 0.0.1
-author:
-
-
+version: 0.1.0
+repository: https://github.com/ayalma/responsive
 environment:
   sdk: ">=2.7.0 <3.0.0"
   flutter: ">=1.17.0"
